Add new select teg

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <div class="container">
     <h1 class="js-title title">Kino portal</h1>
+    <select class="js-select select">
+      <option value="" selected disabled>Choose</option>
+    </select>
     <ul class="js-list list"></ul>
   </div>
 
