--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
   <div class="container">
     <h1 class="js-title title">Kino portal</h1>
-    <select class="js-select select">
-      <option value="" selected disabled>Choose</option>
-    </select>
+    <div class="sel-box">
+      <button class="js-a-z" type="button">A - Z</button>
+      <button class="js-z-a" type="button">Z - A</button>
+      <select class="js-select select">
+        <option value="" selected disabled>Choose</option>
+      </select>
+    </div>
     <ul class="js-list list"></ul>
   </div>
 
